fix layout issue on mobile for blog posts

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -46,7 +46,7 @@ footer {
 
 .app {
     display: grid;
-    height: calc(100vh - 60px);
+    // height: calc(100vh - 60px);
     grid-template-areas:
         "header"
         "main"
